--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,10 +1,10 @@
 .card{
     background-color: red;
-    border: 3px solid red;
+    border: 3px solid;
     border-radius: 10px;
     overflow: hidden;
-    font-family: Roboto;
     text-align: center;
+    margin: 10px;
 
 
     display: flex;
